[package]
name = "zkvm_utreexo"
version = "0.1.0"
authors = ["Alex Wu <dindinw@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
byteorder = "1"
subtle = "2"
serde = { version = "1.0", features=["derive"] }
curve25519-dalek = { version = "1.0.1", features = ["serde"] }
merlin = "1.0.1"


